--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,8 @@
         android:layout_marginHorizontal="20dp"
         android:background="?android:attr/dividerVertical" />
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_detail"
-        android:name="com.example.lab_week_03.DetailFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/fragment_container"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
 </LinearLayout>
